--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <head>
 	<!-- Load plotly.js into the DOM -->
 	<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+	<script src="https://github.com/clarence-lang/plotly.clar/blob/master/js/index.js"></script>
 </head>
 
 <body>
